# learning

./: .gitignore  .gitmodules  README.md
C/: README.md  unmatched.c
C++/: .gitignore  Makefile  classes.h
C++/c++_primer_toys/: basic_io.cpp
C++/interview_questions/: remove_element.cpp  valid_parens.cpp
C++/old/: classes.cpp
C++/work/: README.md  boolean_logic.cc  call_by_reference.cc  casts.cc  default_args.cc  enums.cc  function_overloading.cc  generics_and_overloading.cc  optional.cc  pairs_and_tuples.cc  preprocessor.cc  reference_vs_pointer.cc  structs.cc  trailing_commas.cc
C/c++/: .ycm_extra_conf.py  classes_main.cpp
C/compilation/: Makefile  README.md  assembly.md  mathy_main.c  simple_lib.c  simple_lib.h  simple_main.c
C/debugging/: README.md
C/define/: import_gparent.c  import_gparent.h  import_parent.c  import_parent.h  main.c
C/enums/: main.c
C/mpi/: .ycm_extra_conf.py  Makefile  (+7 more)
CUDA/: .gitignore  GPU_hardware.md  GPU_logic.md  GPU_memory.md  README.md  profiling.md  types_of_parallelism.md
code_structure/: visitor_pattern.md
crafting_interpreters/: main.py  scanner.py  scanner_test.py
linear_algebra/: convex_optimization.tex  linear_algebra.tex
machine_learning/: ML.tex  README.md
nersc/: README.md
python/: README.md
rust/: README.md
rust/pair_counter/: Cargo.toml  README.md
rust/pair_counter/src/: checks.rs  common.rs  kdtree.rs  kdtree_impl.rs  lib.rs  naive.rs  simple_grid.rs
rust/pair_counter/tests/: performance.rs
statistics/: glossary.tex
threejs/: README.md  index.html  package-lock.json  webpack.config.js
(+453 files in other folders)
