[package]
name = "pair_counter"
version = "0.1.0"
authors = ["Christopher Bradshaw <christopher.peter.bradshaw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ord_subset = "3"
statistical = "1"

# The benchmarking profile, used for `cargo bench` (and the test targets and
# unit tests for `cargo test --release`).
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
# Note that you shouldn't run flamegraph on this output as a bunch of stuff get compiled away (??)
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
